// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReportBrowser3 renders a loading widget when no cycle is selected 1`] = `
<div>
  <Connect(QuestionnaireTypeTabs) />
  <div
    className="form-group"
    style={
      Object {
        "marginTop": "10px",
      }
    }
  >
    <Connect(AuditCycleSelector) />
     
    <Connect(CitySelector) />
     
    <Connect(StoreTypeSelector) />
     
    <Connect(StorePrioritySelector) />
     
    <Connect(StartDateSelector) />
     
    <Connect(EndDateSelector) />
     
    <Connect(DownloadSummaryButton) />
     
    <Connect(DownloadDetailsButton) />
    <big
      className="pull-right"
      style={
        Object {
          "fontSize": "130%",
          "marginLeft": "50px",
          "marginRight": "10px",
        }
      }
    >
      <b>
        0
      </b>
       Reports
    </big>
  </div>
  <Loading />
</div>
`;

exports[`ReportBrowser3 renders a message when there are no audit cycles 1`] = `
<div>
  <Connect(QuestionnaireTypeTabs) />
  <div
    className="form-group"
    style={
      Object {
        "marginTop": "10px",
      }
    }
  >
    <Connect(AuditCycleSelector) />
     
    <Connect(CitySelector) />
     
    <Connect(StoreTypeSelector) />
     
    <Connect(StorePrioritySelector) />
     
    <Connect(StartDateSelector) />
     
    <Connect(EndDateSelector) />
     
    <Connect(DownloadSummaryButton) />
     
    <Connect(DownloadDetailsButton) />
    <big
      className="pull-right"
      style={
        Object {
          "fontSize": "130%",
          "marginLeft": "50px",
          "marginRight": "10px",
        }
      }
    >
      <b>
        0
      </b>
       Reports
    </big>
  </div>
  <Jumbotron
    align="center"
    heading="there are no reports here"
    para="yet"
  />
</div>
`;

exports[`ReportBrowser3 renders the audit store table with correct props 1`] = `
<div>
  <Connect(QuestionnaireTypeTabs) />
  <div
    className="form-group"
    style={
      Object {
        "marginTop": "10px",
      }
    }
  >
    <Connect(AuditCycleSelector) />
     
    <Connect(CitySelector) />
     
    <Connect(StoreTypeSelector) />
     
    <Connect(StorePrioritySelector) />
     
    <Connect(StartDateSelector) />
     
    <Connect(EndDateSelector) />
     
    <Connect(DownloadSummaryButton) />
     
    <Connect(DownloadDetailsButton) />
    <big
      className="pull-right"
      style={
        Object {
          "fontSize": "130%",
          "marginLeft": "50px",
          "marginRight": "10px",
        }
      }
    >
      <b>
        2
      </b>
       Reports
    </big>
  </div>
  <Connect(AuditStoreTable) />
</div>
`;
